Adminコマンドの不具合修正